adding positive numbers constraint

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,8 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+
+livre.anneePublication.min.exceeded = L'année de publication doit être supérieure ou égale à 1000
+livre.anneePublication.max.exceeded = L'année de publication doit être inférieure ou égale à 2030
+
