styleing front and besgin uploading XML FILE

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -17,3 +17,20 @@ default.not.unique.message=La propriÃ©tÃ© [{0}] de la classe [{1}] avec la valeu
 
 default.paginate.prev=PrÃ©cÃ©dent
 default.paginate.next=Suivant
+
+
+default.show.label=Afficher {0}
+default.edit.label=Modifier {0}
+default.list.label=Liste des {0}
+default.new.label=Créer {0}
+default.button.edit.label=Modifier
+default.button.delete.label=Supprimer
+default.button.delete.confirm.message=Êtes-vous sûr ?
+
+livre.label=Livre
+livre.titre.label=Titre
+livre.auteur.label=Auteur
+livre.isbn.label=ISBN
+livre.anneePublication.label=Année de publication
+livre.genre.label=Genre
+livre.description.label=Description
