--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -30,18 +30,27 @@ default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 
 default.home.label=Home
-default.list.label={0} List
 default.add.label=Add {0}
-default.new.label=New {0}
 default.create.label=Create {0}
+default.button.create.label=Create
+default.button.update.label=Update
+
 default.show.label=Show {0}
 default.edit.label=Edit {0}
-
-default.button.create.label=Create
+default.list.label={0} List
+default.new.label=Create {0}
 default.button.edit.label=Edit
-default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
+
+livre.label=Book
+livre.titre.label=Title
+livre.auteur.label=Author
+livre.isbn.label=ISBN
+livre.anneePublication.label=Year of Publication
+livre.genre.label=Genre
+livre.description.label=Description
+
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
@@ -54,3 +63,5 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+
