internationalisation added successfully

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -22,15 +22,57 @@ default.paginate.next=Suivant
 default.show.label=Afficher {0}
 default.edit.label=Modifier {0}
 default.list.label=Liste des {0}
-default.new.label=Créer {0}
+default.new.label=Creer {0}
 default.button.edit.label=Modifier
 default.button.delete.label=Supprimer
-default.button.delete.confirm.message=Êtes-vous sûr ?
+default.button.delete.confirm.message=Etes-vous sur ?
 
+# Entité
 livre.label=Livre
+livre.id.label=ID
 livre.titre.label=Titre
 livre.auteur.label=Auteur
-livre.isbn.label=ISBN
-livre.anneePublication.label=Année de publication
 livre.genre.label=Genre
+livre.annee.label=Annese
+
+# Actions générales
+default.actions.label=Actions
+default.button.show.label=Voir
+
+livre.isbn.label=ISBN
 livre.description.label=Description
+
+# Labels
+livre.anneePublication.label=Year of Publication
+
+livre.genre.spring.label=Spring Boot
+livre.genre.programming.label=Programmation
+livre.genre.dramatique.label=Dramatique
+livre.genre.humouristique.label=Humoristique
+
+livre.list.label=Liste des Livres
+livre.form.title=Informations sur le livre
+livre.create.title=Ajouter un nouveau livre
+livre.xml.import.title=Importer depuis un fichier XML
+livre.xml.import.single.label=Un seul livre
+livre.xml.import.multiple.label=Plusieurs livres
+livre.details.label=Details du livre
+livre.description.empty.label=Non renseignée
+livre.export.xml.label=Exporter XML
+home.title=Accueil
+home.welcome=Bienvenue sur BiblioApp
+home.description=Une application simple de gestion de bibliotheque avec Grails et Groovy
+home.manageBooks=Gerer les livres
+
+app.name=BiblioApp
+nav.home=Accueil
+nav.books=Livres
+lang.fr=Francais
+lang.en=Anglais
+
+
+
+default.button.save.label=Enregistrer
+default.button.cancel.label=Annuler
+default.home.label=Accueil
+form.error.header=Erreurs dans le formulaire :
