--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -35,6 +35,16 @@ default.create.label=Create {0}
 default.button.create.label=Create
 default.button.update.label=Update
 
+home.title=Home
+home.welcome=Welcome, BiblioApp!
+
+app.name=BiblioApp
+nav.home=Home
+nav.books=Books
+lang.fr=French
+lang.en=English
+
+
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.list.label={0} List
@@ -43,13 +53,52 @@ default.button.edit.label=Edit
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
+# Entity
 livre.label=Book
+livre.id.label=ID
 livre.titre.label=Title
 livre.auteur.label=Author
-livre.isbn.label=ISBN
-livre.anneePublication.label=Year of Publication
 livre.genre.label=Genre
+livre.annee.label=Year
+
+# General Actions
+default.actions.label=Actions
+default.button.show.label=Show
+
+livre.isbn.label=ISBN
 livre.description.label=Description
+
+livre.genre.spring.label=Spring Boot
+livre.genre.programming.label=Programming
+livre.genre.dramatique.label=Dramatic
+livre.genre.humouristique.label=Humorous
+
+livre.list.label=Book List
+livre.form.title=Book Details
+livre.create.title=Add a New Book
+livre.xml.import.title=Import from XML File
+livre.xml.import.single.label=Single Book
+livre.xml.import.multiple.label=Multiple Books
+livre.details.label=Book Details
+livre.description.empty.label=Not provided
+livre.export.xml.label=Export XML
+home.description=A simple library management application with Grails and Groovy
+home.manageBooks=Manage Books
+
+
+# Labels
+livre.anneePublication.label=Year of Publication
+
+# Default messages
+default.errors.label=Form Errors:
+
+
+
+default.button.save.label=Save
+default.button.cancel.label=Cancel
+form.error.header=Form contains errors:
+
+
 
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
